# ConveyorBelt_Analysis

./: .gitignore  PCL_NotBuilding_Errors  README.md
conveyor_belt/: CMakeLists.txt  package.xml
conveyor_belt/launch/: project_world.launch.py
conveyor_belt/models/conveyor_belt/: model.sdf
conveyor_belt/models/new_conveyor_belt/: model.sdf
conveyor_belt/models/new_conveyor_belt/meshes/: belt_moving_mesh.dae  larger_belt.dae  new_belt.dae  new_belt_angled.dae  updated_belt_10m.dae
conveyor_belt/models/realsense_camera/: model.config  model.sdf
conveyor_belt/rviz/: rviz.rviz  rviz2.rviz
conveyor_belt/scripts/: loadProfile.py
conveyor_belt/src/: despawnObjects.cpp  filter.cpp  loadProfile.cpp  load_profile.cpp  service.cpp  spawnObjects.cpp
conveyor_belt/urdf/: box.urdf  camera.urdf  cylinder.urdf  sphere.urdf
conveyor_belt/worlds/: project_world.world  project_world_2.world
conveyor_belt_msgs/: CMakeLists.txt  package.xml
conveyor_belt_msgs/srv/: BatchDeleteEntities.srv
