<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>conveyor_belt</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="didiprins@optusnet.com.au">student</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>OpenCV</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!-- Add line below to allow gazebo to access model files in install directory -->
    <gazebo_ros gazebo_model_path="${prefix}/models"/> 
  </export>
</package>
