<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>conveyor_belt</name>
  <version>0.0.0</version>
  <description>Conveyor Belt Analysis package for generating load profile - mixed Python an C++ package</description>
  <maintainer email="didiprins@optusnet.com.au">student</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>OpenCV</depend>
  <depend>gazebo_msgs</depend>
  <depend>ament_index_cpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <!-- <depend>PCL</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend> -->

  <export>
    <build_type>ament_cmake</build_type>
    <!-- Add line below to allow gazebo to access model files in install directory -->
    <gazebo_ros gazebo_model_path="${prefix}/models"/> 
  </export>
</package>
